pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  labels:
    zone: prod
    version: v1
spec:
  containers:
  - name: docker-jenkins
    image: docker-jenkins:v5
    ports:
    - containerPort: 8071
