svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  labels:
    app: docker-jenkins
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8070
    protocol: TCP
    targetPort: 8070
  selector:
    app: docker-jenkins
